src/snapshots/intervalle__parse_after_time_no_sec.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"+15:28\").unwrap()"
---
After(
    Time(
        15:28:00.0,
    ),
)
