src/snapshots/intervalle__parse_date_time_no_sec.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"2024-08-08 14:10\").unwrap()"
---
Point(
    DateTime(
        2024-08-08 14:10:00.0,
    ),
)
