src/snapshots/intervalle__parse_time.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"15:28:59\").unwrap()"
---
Point(
    Time(
        15:28:59.0,
    ),
)
