src/snapshots/intervalle__parse_time_no_sec.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"15:28\").unwrap()"
---
Point(
    Time(
        15:28:00.0,
    ),
)
