src/snapshots/intervalle__parse_today.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"today\").unwrap()"
---
Point(
    Today,
)
