src/snapshots/intervalle__parse_tomorrow.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"tomorrow\").unwrap()"
---
Point(
    Tomorrow,
)
