src/snapshots/intervalle__parse_yesterday.snap
---
source: src/lib.rs
expression: "TimeRange::parser.parse(\"yesterday\").unwrap()"
---
Point(
    Yesterday,
)
